--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
    <link rel="stylesheet" href="/news.css">
 </head>
-<body>
-    <header>
-
+<body class="container">
+    <header class="mt-4 text-success">
+      <div class="d-flex justify-content-between">
+            <div>
+                <h4 class="heading-link">The Daily News Of World!</h4>
+            </div>
+            <div >
+                <a class="heading-link me-2" target="_blank" href="#">News</a>
+                <a class="heading-link" target="_blank" href="http://127.0.0.1:5500/blog.html">Blog</a>
+            </div>
+      </div>
     </header>
-    <main class="container">
+    <main >
         <section class="mt-4">
                 <div id="categories-container" class="categories">
                     
@@ -21,6 +29,14 @@
         </section>
         <section class="mt-4">
 
+     <!-- add spinner section  -->
+            <section id="spinner-section" class="d-none">
+                <div class="d-flex justify-content-center">
+                    <div class="spinner-border text-success" role="status">
+                        <span class="visually-hidden ">Loading...</span>
+                    </div>
+                </div>
+            </section>
 
             <!-- modal for news details  -->
             <div id="modal-details">
