--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
                 </div>
            
         </section>
+        <!-- items show  -->
+
+        <section class="mt-4">
+          <div id="items-show" class="items d-none">
+             
+          </div>
+        </section>
+
+
+
+
         <section class="mt-4">
 
      <!-- add spinner section  -->
